--- a/style.css
+++ b/style.css
@@ -1,7 +1,248 @@
+/* my default stuff */
 * {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
+}
+
+/* fixed background styles*/
+
+.black {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: block;
+    background-color: black;
+    top: 0;
+    left: 0;
+    z-index: -10;
+}
+
+#fixed {
+    background-image: url('img/background.jpg');
+    position: fixed;
+    display: block;
+    opacity: .7;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform;
+    z-index: -1;
+  }
+  
+/* wrapper & main grid container styles*/
+.wrapper {
+    margin: 20px;
+    max-width: 100%;
+    height: fit-content;
+}
+
+.grid_container {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, auto);
+    grid-template-areas:
+    "header header"
+    "hero hero"
+    "main main"
+    "footer footer";
+}
+
+/* header styles */
+header {
+    grid-area: header;
+    text-align: center;
+    align-items: center;
+    display: grid;
+    /* background-color: lightblue; */
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, auto);
+    grid-template-areas:
+    "header_top header_top"
+    "header_left header_right";
+}
+
+.header_top {
+    grid-area: header_top;
+    display: flex;
+    justify-content: center;
+}
+
+.logo {
+    width: 80px;
+    height: auto; 
+}
+
+.logo img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  
+
+.header_left {
+    grid-area: header_left;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation_list {
+    display: flex;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.navigation_list li {
+    margin-right: 10px;
+}
+
+.navigation_list li a {
+    color: #D3D3D3;
+}
+
+.navigation_list li a:hover {
+    text-shadow:
+    2px 0px 3px #000,
+    0px 2px 5px #FFD700;
+}
+
+.header_right {
+    grid-area: header_right;
+}
+
+/* hero styles */
+.hero {
+    grid-area: hero;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+    "hero_2";
+    background-color: lightgreen;
+}
+
+.hero_1 {
+    display: none;
+}
+
+.advert_desktop {
+    grid-area: advert_desktop;
+    background-color: lightgoldenrodyellow;
+    display: none;
+}
+
+main {
+    grid-area: main;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
+    grid-template-areas:
+    "article"
+    "advert_mobile"
+    "article list";
+    background-color: lightcyan;
+}
+
+aside {
+    grid-area: aside;
+    background-color: lightsalmon;
+    display: none;
+}
+
+footer {
+    grid-area: footer;
+    background-color: lightpink;
+}
+
+@media (min-width: 576px) {
+    .grid_container {
+        grid-template-rows: repeat(5, auto);
+        grid-template-areas:
+        "header header"
+        "hero hero"
+        "main main"
+        "aside aside"
+        "footer footer";
+    }
+
+    header {
+        grid-template-rows: auto;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas:
+        "header_top header_left header_right";
+    }
+
+
+    .hero {
+        grid-template-rows: repeat(2, auto);
+        grid-template-areas:
+        "hero_1"
+        "hero_2";
+    }
+
+    .hero_1 {
+        display: block;
+    }
+
+    main {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, auto);
+        grid-template-areas:
+        "article advert_mobile"
+        "article list";
+    }
+
+    aside {
+        display: block;
+    }
+}
+
+@media (min-width: 992px) {
+    .grid_container {
+        grid-template-rows: repeat(4, auto);
+        grid-template-areas:
+        "header header"
+        "hero advert_desktop"
+        "main aside"
+        "footer footer";
+    }
+
+    header {
+        /* background-color: blue; */
+    }
+
+    .navigation_list {
+        font-size: 2em;
+    }
+
+    .hero {
+        grid-template-rows: auto;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "hero_1 hero_2";
+    }
+
+    main {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+        "article article list";
+    }
+
+    .advert_desktop {
+        display: block;
+    }
+
+    .advert_mobile {
+        display: none;
+    }
 }
