--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-/* my default stuff */
+/* my default stuff & font */
 * {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Barlow', sans-serif;
 }
 
 /* fixed background styles*/
@@ -24,7 +28,7 @@
     background-image: url('img/background.jpg');
     position: fixed;
     display: block;
-    opacity: .7;
+    opacity: .5;
     top: 0;
     left: 0;
     width: 100%;
@@ -46,7 +50,7 @@
 
 .grid_container {
     display: grid;
-    grid-gap: 1em;
+    grid-gap: 2em;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, auto);
     grid-template-areas:
@@ -62,6 +66,7 @@ header {
     text-align: center;
     align-items: center;
     display: grid;
+    grid-gap: 1em;
     /* background-color: lightblue; */
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(2, auto);
@@ -77,7 +82,7 @@ header {
 }
 
 .logo {
-    width: 80px;
+    width: 100px;
     height: auto; 
 }
 
@@ -97,7 +102,7 @@ header {
 .navigation_list {
     display: flex;
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: bold;
 }
 
@@ -106,50 +111,187 @@ header {
 }
 
 .navigation_list li a {
-    color: #D3D3D3;
+    color: 	#B22222;
 }
 
 .navigation_list li a:hover {
     text-shadow:
-    2px 0px 3px #000,
-    0px 2px 5px #FFD700;
+    2px 0px 2px #C0C0C0,
+    0px 2px 5px #000;
 }
 
 .header_right {
     grid-area: header_right;
 }
 
+#aside_dispose_mobile {
+    display: none;
+}
+
 /* hero styles */
 .hero {
     grid-area: hero;
     display: grid;
+    height: 160px;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-template-areas:
     "hero_2";
-    background-color: lightgreen;
+    background: url('img/hero.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-blend-mode: overlay;
+    position: relative;
+}
+
+.hero_overlay {
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0.1) 50%, rgba(0,0,0,1) 100%);
+    position: absolute;
+    top: 0;
+    height: 160px;
+    width: 100%;
 }
 
 .hero_1 {
+    grid-area: hero_1;
     display: none;
+    text-transform: uppercase;
+    color: white;
+    z-index: 10;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 10px;
+    text-shadow: 0px -2px 2px #000000;
 }
 
+.hero_2 {
+    grid-area: hero_2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero_2 button {
+    padding: 10px;
+    background-color: yellow;
+    border: 2px solid transparent;
+    z-index: 10;
+}
+
+.hero_2 button:hover {
+    border: 2px solid black;
+}
+
+.hero_2 button:active {
+    transform: scale(.9);
+}
+
+/* advert for desktop version */
 .advert_desktop {
     grid-area: advert_desktop;
-    background-color: lightgoldenrodyellow;
     display: none;
+    background: url('img/dominos.jpg');
+    background-size: contain;
+    background-position: center;
+    animation: animate_desktop 5s linear infinite;
 }
 
+@keyframes animate_desktop {
+    0% {
+      transform: scale(1);
+    }
+  
+    50% {
+      transform: scale(.9);
+    }
+  
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+/* advert for mobile version */
+.advert_mobile {
+    grid-area: advert_mobile;
+    background: url('img/dominos.jpg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100px;
+    margin-bottom: 20px;
+    animation: animate_mobile 3s linear infinite;
+}
+
+@keyframes animate_mobile {
+    0% {
+      transform: rotateX(0deg);
+    }
+  
+    25% {
+      transform: rotateX(90deg);
+    }
+
+    50% {
+        transform: rotateX(180deg);
+    }
+  
+    100% {
+      transform: rotateX(0deg);
+    }
+  }
+
+/* main content styles */
 main {
     grid-area: main;
     display: grid;
+    grid-gap: 1em;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, auto);
     grid-template-areas:
     "article"
     "advert_mobile"
-    "article list";
-    background-color: lightcyan;
+    "article_list";
+    /* background-color: lightcyan; */
+    text-align: justify;
+    color: white;
+}
+
+article {
+    grid-area: article;
+    margin-bottom: 20px;
+}
+
+.article_list {
+    grid-area: article_list;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.article_list p {
+    margin-bottom: 20px;
+}
+
+.article_list ul {
+    text-align: center;
+}
+
+.article_list ul li {
+    margin-bottom: 10px;
+}
+
+.article_list a {
+    color:#B22222;
+    display: block;
+    line-height: 20px;
+}
+
+.article_list a:hover {
+    color:white;
+    font-size: 1.5em;
+    transition: ease-in .3s;
 }
 
 aside {
@@ -158,11 +300,20 @@ aside {
     display: none;
 }
 
+/* footer styles */
 footer {
     grid-area: footer;
-    background-color: lightpink;
+    color: white;
+    /* background-color: lightpink; */
 }
 
+/* box shadow class */
+.shadow {
+    -webkit-box-shadow: 0px 0px 10px 7px rgba(48,48,48,0.8); 
+box-shadow: 0px 0px 10px 7px rgba(48,48,48,0.8);
+}
+
+/* media queries */
 @media (min-width: 576px) {
     .grid_container {
         grid-template-rows: repeat(5, auto);
@@ -190,7 +341,10 @@ footer {
     }
 
     .hero_1 {
-        display: block;
+        display: flex;
+        padding: 0;
+        padding-top: 10px;
+        align-items: center;
     }
 
     main {
@@ -198,10 +352,14 @@ footer {
         grid-template-rows: repeat(2, auto);
         grid-template-areas:
         "article advert_mobile"
-        "article list";
+        "article_list article_list";
     }
 
     aside {
+        display: block;
+    }
+
+    #aside_dispose_mobile {
         display: block;
     }
 }
@@ -217,7 +375,7 @@ footer {
     }
 
     header {
-        /* background-color: blue; */
+        grid-gap: 0;
     }
 
     .navigation_list {
@@ -231,11 +389,21 @@ footer {
         "hero_1 hero_2";
     }
 
+    .hero_1 {
+        padding-top: 0;
+        align-items: flex-start;
+        padding-left: 20px;
+    }
+
+    .hero_2 button {
+        padding: 20px;
+    }
+
     main {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
         grid-template-areas:
-        "article article list";
+        "article article_list";
     }
 
     .advert_desktop {
