--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ body {
     background-color: black;
     top: 0;
     left: 0;
-    z-index: -10;
+    z-index: -12;
 }
 
-#fixed {
+/* #fixed {
     background-image: url('img/background.jpg');
     position: fixed;
     display: block;
@@ -34,10 +34,30 @@ body {
     width: 100%;
     height: 100%;
     background-size: cover;
-    background-position: center center;
+    background-position: no-repeat center center;
     transform: translateZ(0);
     will-change: transform;
     z-index: -1;
+  } */
+
+  /* test for mobile background fix */
+  body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    opacity: .5;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url('img/background.jpg') no-repeat center center;
+    transform: translateZ(0);
+    will-change: transform;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
   
 /* wrapper & main grid container styles*/
