--- a/style.css
+++ b/style.css
@@ -9,13 +9,15 @@
 
 body {
     font-family: 'Barlow', sans-serif;
+    height: 100%;
 }
 
 /* fixed background styles*/
 
 .black {
     width: 100%;
-    height: 100%;
+    min-height: -webkit-fill-available;
+    height: 100vh;
     position: fixed;
     display: block;
     background-color: black;
@@ -49,7 +51,8 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    min-height: -webkit-fill-available;
+    height: 100vh;
     z-index: -10;
     background: url('img/background.jpg') no-repeat center center;
     -webkit-background-size: cover;
